--- a/config/src/main/resources/application.yaml
+++ b/config/src/main/resources/application.yaml
@@ -1,1 +1,14 @@
+server:
+  port: 8888
 
+spring:
+  application:
+    name: config-server
+
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://lab.ssafy.com/kimta2hwan/s09p31e102-yaml.git
+          default-label: master
+          search-paths: yaml/**
