Docs: 500 에러 방지 설정
500 에러 방지로 클론 폴더 지정

--- a/config/src/main/resources/application.yaml
+++ b/config/src/main/resources/application.yaml
@@ -12,3 +12,4 @@ spring:
           uri: https://lab.ssafy.com/kimta2hwan/s09p31e102-yaml.git
           default-label: master
           search-paths: yaml/**
+          basedir: ../../repo
