Docs: 깃랩 아이디 비밀번호 추가
깃랩 아이디 비밀번호 추가

--- a/config/src/main/resources/application.yaml
+++ b/config/src/main/resources/application.yaml
@@ -13,3 +13,6 @@ spring:
           default-label: master
           search-paths: yaml/**
           basedir: ../../repo
+
+  profiles:
+    include: gitlab
