--- a/P_ON/android/app/build.gradle
+++ b/P_ON/android/app/build.gradle
@@ -68,6 +68,12 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+
+//            // start of 코드난독화 및 사이즈 축소
+//            minifyEnabled true
+//            useProguard true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            // end of 코드난독화 및 사이즈 축소
         }
     }
 
