--- a/promise/src/main/resources/bootstrap.yaml
+++ b/promise/src/main/resources/bootstrap.yaml
@@ -1,8 +1,8 @@
 spring:
   config:
-    import: optional:configserver:http://j9e101.p.ssafy.io:8888
+    import: optional:configserver:http://k9e102.p.ssafy.io:8888
 
   cloud:
     config:
-      name: auth
+      name: promise
       profile: default
