--- a/User/build.gradle
+++ b/User/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     // jwt 라이브러리
     implementation 'com.auth0:java-jwt:4.4.0'
 
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 //    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-config'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
