--- a/promise/Dockerfile
+++ b/promise/Dockerfile
@@ -1,4 +1,5 @@
 FROM amazoncorretto:17
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} promise.jar
+EXPOSE 9001
 ENTRYPOINT ["java", "-jar", "/promise.jar"]
