--- a/User/.gitignore
+++ b/User/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 .gradle
-application.yml
+application-jwt.yml
+application-local.yml
+application-oauth.yml
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
