--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
-	id 'org.asciidoctor.jvm.convert' version '3.3.2'
+	id "com.epages.restdocs-api-spec" version '0.19.0'
 }
 
 group = 'com.wanyviny'
@@ -12,18 +12,21 @@ java {
 	sourceCompatibility = '17'
 }
 
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
 repositories {
 	mavenCentral()
 }
 
+openapi3 {
+	setServer("http://localhost:7070")
+	title = "restdocs-swagger API Documentation"
+	description = "Spring REST Docs with SwaggerUI."
+	version = "0.0.1"
+	format = "json"
+	outputDirectory = "src/main/resources/static/docs"
+	outputFileNamePrefix = 'promise-service'
+}
+
 ext {
-	set('snippetsDir', file("build/generated-snippets"))
 	set('springCloudVersion', "2022.0.4")
 }
 
@@ -45,9 +48,10 @@ dependencies {
 //	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
+//	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation "org.mockito:mockito-core:3.+"
+	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.0'
 }
 
 dependencyManagement {
@@ -57,11 +61,5 @@ dependencyManagement {
 }
 
 tasks.named('test') {
-	outputs.dir snippetsDir
 	useJUnitPlatform()
-}
-
-tasks.named('asciidoctor') {
-	inputs.dir snippetsDir
-	dependsOn test
 }
