--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,3 +1,33 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  // eslint 미적용될 폴더나 파일 명시
+  "ignorePatterns": ["node_modules/"],
+
+  "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended", // eslint의 포매팅을 prettier로 사용.
+    "prettier" // eslint-config-prettier prettier와 중복된 eslint 규칙 제거
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint", "prettier", "no-null"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-unused-vars": "error",
+
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    // 경고표시, 파일 확장자를 .ts나 .tsx 모두 허용함
+    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
+    "no-useless-catch": "off" // 불필요한 catch 못쓰게 하는 기능 끔
+  }
 }
