--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -24,10 +24,11 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-unused-vars": "error",
-
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     // 경고표시, 파일 확장자를 .ts나 .tsx 모두 허용함
     "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
-    "no-useless-catch": "off" // 불필요한 catch 못쓰게 하는 기능 끔
+    "no-useless-catch": "off", // 불필요한 catch 못쓰게 하는 기능 끔
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
