--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "next": "13.5.6",
@@ -35,6 +36,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3",
