Test: 서버 테스트
도커 네트워크 테스트

Change-Id: I0d17f16a3fb15dd96079171a89589881f039de36

--- a/discovery/src/main/resources/bootstrap.yaml
+++ b/discovery/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: optional:configserver:http://k9e102.p.ssafy.io:8888
+    import: optional:configserver:http://config-container:8888
 
   cloud:
     config:
