--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -10,9 +10,9 @@
   "extends": [
     "airbnb",
     "airbnb-typescript",
-    "eslint:recommended",
+    // "eslint:recommended",
+    "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
     "plugin:prettier/recommended", // eslint의 포매팅을 prettier로 사용.
     "prettier" // eslint-config-prettier prettier와 중복된 eslint 규칙 제거
   ],
