Feat: 도커파일 ㅅ수정
Change-Id: Iaaf1370c8edc7dbd83f5c56c4d4bb64bf2f82919

Former-commit-id: e859e68571b5c6974bc9646ea5b6a77a456f1543

--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -42,11 +42,11 @@ RUN perl -pi -e 's/<base href="\/">/<base href=".\/">/' /build/web/index.html
 # once heare the app will be compiled and ready to deploy
 
 # use nginx to deploy
-FROM nginx:1.25.2-alpine
+FROM nginx
 
+EXPOSE 5000
 # copy the info of the builded web app to nginx
-COPY --from=build-env /app/build/web /usr/share/nginx/html
+COPY --from=build-env /app/build/web /usr/sfhare/nginx/html
 
 # Expose and run nginx
-EXPOSE 5000
-CMD ["nginx", "-g", "daemon off;"]
+# CMD ["nginx", "-g", "daemon off;"]
