Docs: 도커파일 수정
빌드 오류 수정중

Change-Id: I8f6c04d3a7fbebc68be8e66f8322925224b7b6b0

Former-commit-id: 4b906baae5beea8f2aa22259ec12f70090a1a125

--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -46,7 +46,7 @@ FROM nginx
 
 EXPOSE 5000
 # copy the info of the builded web app to nginx
-COPY --from=build-env /app/build/web /usr/sfhare/nginx/html
+COPY --from=build-env /app/build/web /usr/share/nginx/html
 
 # Expose and run nginx
 # CMD ["nginx", "-g", "daemon off;"]
