Docs: 도커파일ã 수정
빌드를 위한 최종 수정

Change-Id: I98458c3f1b9ac2514730a3367d04eb3ce4905f97

Former-commit-id: e6a6db637307f54074021beee27fd4a1402c91a0

--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -46,8 +46,8 @@ FROM nginx
 
 # copy the info of the builded web app to nginx
 COPY --from=build-env /app/build/web /usr/share/nginx/html
-COPY etc/mobile/nginx.conf /etc/nginx/nginx.conf
+COPY /etc/mobile/nginx.conf /etc/nginx/nginx.conf
 
 # Expose and run nginx
-EXPOSE 80
+EXPOSE 5000
 CMD ["nginx", "-g", "daemon off;"]
