--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -46,7 +46,7 @@ FROM nginx
 
 # copy the info of the builded web app to nginx
 COPY --from=build-env /app/build/web /usr/share/nginx/html
-COPY /etc/mobile/nginx.conf /etc/nginx/nginx.conf
+# COPY /etc/mobile/nginx.conf /etc/nginx/nginx.conf
 
 # Expose and run nginx
 EXPOSE 5000
