--- a/P_ON/web/manifest.json
+++ b/P_ON/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "핑키와 함께 하는 약속 관리",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
