--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -48,10 +48,10 @@ dependencies {
 //	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'io.projectreactor:reactor-test'
-//	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-//	testImplementation "org.mockito:mockito-core:3.+"
-//	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.0'
+	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	testImplementation "org.mockito:mockito-core:3.+"
+	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.0'
 }
 
 dependencyManagement {
