--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -75,6 +75,9 @@ dependencies:
   json_annotation: ^4.8.0
   timeago: ^3.4.0
   image_picker: ^1.0.4
+  flutter_bloc: ^8.1.3
+  percent_indicator: ^4.2.3
+  flutter_riverpod: ^2.4.5
 
 dev_dependencies:
   flutter_test:
