Fix: android Id, package, appName 수정
테스트앱 배ã포를 ì위한 통일

Change-Id: Id67d71906e03b60c3548f0967f67d3aabdc8fe7b

Former-commit-id: 6e9277011b89daad3984472867d917d425f55914

--- a/P_ON/android/app/src/main/AndroidManifest.xml
+++ b/P_ON/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fighting">
+    package="com.wanyviny.p-on">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:label="플랜온">
+        android:label="P:ON">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
