--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -1,8 +1,8 @@
-name: P_ON
+name: fast_app_base
 description: 핑키와 함께하는 약속 관리 앱
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -89,8 +89,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  retrofit_generator: '5.0.0'
-  build_runner: '2.3.3'
+  retrofit_generator: "5.0.0"
+  build_runner: "2.3.3"
   json_serializable: ^6.6.1
   isar_generator: 3.1.0
   mock_web_server: ^5.0.0-nullsafety.1
@@ -98,14 +98,11 @@ dev_dependencies:
   test: ^1.22.0
   change_app_package_name: ^1.1.0
 
-
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
