--- a/P_ON/android/app/src/main/AndroidManifest.xml
+++ b/P_ON/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fighting">
+    package="com.wanyviny.p_on">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
