Docs: 서버용 설정 변경
서버용 설정 변경

Change-Id: I940de23634919eb595240e4e23db4939cca5ad83

Former-commit-id: e231cd530a045c3c59931274c8ef8f4a9f43d3d6

--- a/promise/src/main/resources/bootstrap.yaml
+++ b/promise/src/main/resources/bootstrap.yaml
@@ -1,21 +1,21 @@
-#spring:
-#  cloud:
-#    config:
-#      name: promise
-#      profile: default
-
-server:
-  port: 8080
-
 spring:
-  application:
-    name: promise-service
+  cloud:
+    config:
+      name: promise
+      profile: default
 
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: local
+#server:
+#  port: 8080
+#
+#spring:
+#  application:
+#    name: promise-service
+#
+#  data:
+#    mongodb:
+#      host: localhost
+#      port: 27017
+#      database: local
 
   # datasource:
   #   driver-class-name: com.mysql.cj.jdbc.Driver
