--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   percent_indicator: ^4.2.3
   flutter_riverpod: ^2.4.5
+  flutter_naver_map: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -97,7 +98,6 @@ dev_dependencies:
   flutter_oss_licenses: ^2.0.1
   test: ^1.22.0
   change_app_package_name: ^1.1.0
-
 
 
 # For information on the generic Dart part of this file, see the
