--- a/P_ON/android/app/src/main/AndroidManifest.xml
+++ b/P_ON/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jungswanbini">
+    package="com.wanyviny.p_on">
 
     <application
         android:name="${applicationName}"
