--- a/P_ON/android/app/src/main/AndroidManifest.xml
+++ b/P_ON/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme"
+                />
+
+            <meta-data
                 android:name="com.nvaer.maps.map.CLIENT_ID"
                 android:value="b99t409y3p"
                 />
