Chore: Dockerfile 수정
nginx conf 복사 위치 수정

Change-Id: Ie28ec781e2ea729d3dff88f0ddd3fb1f71b2a218

Former-commit-id: 38c7843fa2be3fe80a689b427735415d5983494e

--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -45,7 +45,7 @@ FROM nginx
 
 # copy the info of the builded web app to nginx
 COPY --from=build-env /app/build/web /usr/share/nginx/html
-# COPY /etc/mobile/nginx.conf /etc/nginx/nginx.conf
+COPY /etc/mobile/nginx.conf /etc/nginx/conf.d/
 
 # Expose and run nginx
 EXPOSE 5000
