--- a/P_ON/Dockerfile
+++ b/P_ON/Dockerfile
@@ -45,7 +45,7 @@ FROM nginx
 
 # copy the info of the builded web app to nginx
 COPY --from=build-env /app/build/web /usr/share/nginx/html
-COPY /home/ubuntu/mobile/nginx.conf /etc/nginx/conf.d/
+# COPY /etc/nginx/nginx.conf /etc/nginx/conf.d/
 
 # Expose and run nginx
 EXPOSE 5000
