Feat: 지도선택 기능 구현중
관련 설정파일들 입니다. 패키지 및 의존성 추가했습니다.

Change-Id: Idccfed97d04a84939ec31a1e03053635be9d3f23

Former-commit-id: daa9b9533d73c69d19557456fc4c23b6d263f736

--- a/P_ON/android/app/src/main/AndroidManifest.xml
+++ b/P_ON/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jungswanbini">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
     <application
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +23,8 @@
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme"
+                />
+            <meta-data
                 android:name="com.nvaer.maps.map.CLIENT_ID"
                 android:value="b99t409y3p"
                 />
