--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -79,6 +79,8 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_riverpod: ^2.4.5
   flutter_naver_map: ^1.0.2
+  day_night_time_picker: ^1.3.0+1
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
