Test: 문서화 테스트
rest docs + swagger ui 문서화 테스트

Change-Id: I33e72991f998ae49628581c9979afd5b9e7f8d50

Former-commit-id: 36656dd650676be3642508df987a30b30a1b5734

--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 openapi3 {
-	setServer("https://p-on.site")
+	setServer("http://gateway-container")
 	title = "restdocs-swagger API Documentation"
 	description = "Spring REST Docs with SwaggerUI."
 	version = "0.0.1"
