--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fast_app_base
+name: p_on
 description: 핑키와 함께하는 약속 관리 앱
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
