Test: 문서화 테스트
rest docs + swagger ui 문서화 테스트

Change-Id: Iaa2d4d4aca04e6320b6e4dd2087445dc0955d988

Former-commit-id: 1dcb041df07d3e90912fe20e537fb439a16fee9b

--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 openapi3 {
-	setServer("http://gateway-container")
+	setServer("https://p-on.site")
 	title = "restdocs-swagger API Documentation"
 	description = "Spring REST Docs with SwaggerUI."
 	version = "0.0.1"
