--- a/promise/src/main/resources/bootstrap.yaml
+++ b/promise/src/main/resources/bootstrap.yaml
@@ -1,24 +1,24 @@
-#spring:
-#  config:
-#    import: optional:configserver:http://config-container:8888
-#
-#  cloud:
-#    config:
-#      name: promise
-#      profile: default
-
-server:
-  port: 8080
-
 spring:
-  application:
-    name: promise-service
+  config:
+    import: optional:configserver:http://config-container:8888
 
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: local
+  cloud:
+    config:
+      name: promise
+      profile: default
+
+#server:
+#  port: 8080
+#
+#spring:
+#  application:
+#    name: promise-service
+#
+#  data:
+#    mongodb:
+#      host: localhost
+#      port: 27017
+#      database: local
 
   # datasource:
   #   driver-class-name: com.mysql.cj.jdbc.Driver
