--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'org.springdoc:springdoc-openapi-webflux-core:1.5.13'
+	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.5.13'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
