--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
 
   #ui - widget
-  nav: ^1.3.9
+  nav: ^1.4.2
   simple_shadow: ^0.3.1
   after_layout: ^1.2.0
   flutter_svg: ^2.0.3
@@ -79,6 +79,9 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_riverpod: ^2.4.5
   flutter_naver_map: ^1.0.2
+  go_router: ^10.1.2
+  smooth_page_indicator: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -117,6 +120,7 @@ flutter:
     - assets/image/flag/
     - assets/image/benefit/
     - assets/image/darkmode/
+    - assets/image/fab/
     - assets/image/bank/
     - assets/image/stock/
     - assets/image/credit_card/
