--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_naver_map: ^1.0.2
   go_router: ^10.1.2
   smooth_page_indicator: ^1.1.0
+  firebase_core: ^2.21.0
 
 
 dev_dependencies:
