--- a/promise/src/main/resources/bootstrap.yaml
+++ b/promise/src/main/resources/bootstrap.yaml
@@ -1,11 +1,11 @@
 spring:
   config:
-    import: optional:configserver:http://config-container:8888
+    import: optional:configserver:http://k9e102.p.ssafy.io:8888
 
   cloud:
     config:
       name: promise
-      profile: default
+      profile: prob
 
 #server:
 #  port: 8080
