--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_naver_map: ^1.0.2
   day_night_time_picker: ^1.3.0+1
   location: ^5.0.3
+  stomp_dart_client: ^1.0.0
 
 dev_dependencies:
   flutter_test:
