--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   go_router: ^10.1.2
   smooth_page_indicator: ^1.1.0
   firebase_core: ^2.21.0
+  firebase_messaging: ^14.7.3
 
 
 dev_dependencies:
