--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   day_night_time_picker: ^1.3.0+1
   location: ^5.0.3
   stomp_dart_client: ^1.0.0
+  speech_to_text: ^6.4.0
 
 dev_dependencies:
   flutter_test:
