Fix: User, Follow Controller 수정
User, Follow Controller에서 SecurityContextHolder -> Access Token으로 id값 받아오도록 수정


Former-commit-id: 1dd6afb73fc0f8cec410b98d2bdd2a345e610b80

--- a/user/build.gradle
+++ b/user/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
     // MSA하기 위한 spring cloud
 //    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-config'
