--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -26,24 +26,19 @@ ext {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-//	implementation 'com.auth0:java-jwt:4.4.0'
-//	implementation 'org.springdoc:springdoc-openapi-webflux-core:1.5.13'
-	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.7.0'
-	implementation 'org.springdoc:springdoc-openapi-webflux-core:1.7.0'
+	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-//	testImplementation 'io.projectreactor:reactor-test'
-//	testImplementation "org.mockito:mockito-core:3.+"
 }
 
 dependencyManagement {
