--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
-	id "com.epages.restdocs-api-spec" version '0.19.0'
 }
 
 group = 'com.wanyviny'
@@ -14,16 +13,6 @@ java {
 
 repositories {
 	mavenCentral()
-}
-
-openapi3 {
-	setServer("http://k9e102.p.ssafy.io:8000")
-	title = "restdocs-swagger API Documentation"
-	description = "Spring REST Docs with SwaggerUI."
-	version = "0.0.1"
-	format = "json"
-	outputDirectory = "src/main/resources/static/docs"
-	outputFileNamePrefix = 'promise-service'
 }
 
 ext {
@@ -45,10 +34,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	testImplementation "org.mockito:mockito-core:3.+"
-	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.0'
+//	testImplementation 'io.projectreactor:reactor-test'
+//	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+//	testImplementation "org.mockito:mockito-core:3.+"
+//	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.0'
 }
 
 dependencyManagement {
