--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
