--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 
+    implementation 'org.modelmapper:modelmapper:3.2.0'
+
+
+
     // jwt 라이브러리
     implementation 'com.auth0:java-jwt:4.4.0'
 
