Feat: OpenApiConfigs 추가
OpenApiConfigs 추가


Former-commit-id: f5b326d6b720ee4e8f4d1678e355ff00277220f9

--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // jwt 라이브러리
     implementation 'com.auth0:java-jwt:4.4.0'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+
     // spring cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
