--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -91,6 +91,8 @@ dependencies:
   firebase_messaging: ^14.7.3
   kakao_flutter_sdk: ^1.6.1
 
+  device_info: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
