--- a/kochat/requirements.txt
+++ b/kochat/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 joblib==0.15.1
 JPype1==1.2.0
+kafka-python3==3.0.0
 kiwisolver==1.3.1
 kochat==1.0.3
 konlpy==0.5.2
