Feat: spring cloud 의존성 추가
spring cloud 의존성 추가


Former-commit-id: 0c4564f34432ab3c9c7fbe4238737054918d3490

--- a/alarm/build.gradle
+++ b/alarm/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.wanyviny'
@@ -49,5 +50,11 @@ dependencyManagement {
 }
 
 tasks.named('test') {
+    outputs.dir snippetsDir
     useJUnitPlatform()
+}
+
+tasks.named('asciidoctor') {
+    inputs.dir snippetsDir
+    dependsOn test
 }
