Fix: floder clean
폴더정리


Former-commit-id: 14942f2601a7744084bbed150b19f57e5d65d70d

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ front/.env*.local
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/src/main/resources/firebase/wanibini-d1599-firebase-adminsdk-4c6ay-8ea8b10e56.json
